--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ typings/
 # Optional REPL history
 .node_repl_history
 
-# Output of 'npm pack'
+# Output of 'np"discord.js": "^13.3.1"m pack'
 *.tgz
 
 # Yarn Integrity file
@@ -102,3 +102,4 @@ dist
 
 # TernJS port file
 .tern-port
+config.json
